# trytouca

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmrc  CODEOWNERS  Changelog.md  Contributing.md  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
api/e2e/: .gitignore  __main__.py  client_api.py  client_mongo.py  e2e.env  playbook.csv  playbook.py  pyproject.toml  requirements.txt  setup.py  test_main.py  users.txt  utilities.py
api/e2e/data/: e2e.env  playbook.csv
api/e2e/e2e/: __main__.py  client_api.py  client_mongo.py  playbook.py  utilities.py
cmp/: .clang-format  CMakeLists.txt  build.sh  conanfile.py
cmp/config/: Dockerfile  config.dev.ini  config.dev.json  config.prod.ini  config.prod.json
cmp/docs/: comparison-output.example.json  comparison-output.schema.json
cmp/include/comparator/: logger.hpp  options.hpp
cmp/src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  object_store.cpp  object_store.hpp  options.cpp  options.hpp  platform.cpp  platform.hpp  queue.hpp  service.cpp  service.hpp  startup.cpp  startup.hpp  stats.cpp  stats.hpp  worker.cpp  worker.hpp
examples/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  Readme.md  build.sh
examples/.github/: path-filters.yml
examples/.github/workflows/: javascript.yml  tutorial.yml
examples/advanced/: CMakeLists.txt  code_under_test.cpp  code_under_test.hpp  config.json  regression_test.cpp  regression_test.hpp
examples/basic/: CMakeLists.txt  code_under_test.cpp  code_under_test.hpp  regression_test.cpp  regression_test.hpp
examples/cmake/: external.cmake
examples/cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh
examples/cpp/01_cpp_minimal/: CMakeLists.txt  README.md  is_prime.hpp  is_prime_test.cpp
examples/cpp/02_cpp_basic_api/: CMakeLists.txt  README.md  students.cpp  students.hpp  students_test.cpp  students_types.hpp
examples/cpp/02_cpp_main_api/: CMakeLists.txt  README.md  students.cpp  students_test.cpp  students_types.hpp
examples/cpp/03_cpp_client_api/: CMakeLists.txt  README.md  students.cpp  students.hpp
examples/cpp/03_cpp_core_api/: CMakeLists.txt  README.md  students.cpp  students.hpp  students_test.cpp  students_test.hpp
examples/cpp/04_cpp_external_input/: CMakeLists.txt  config.json  students.cpp  students_test.cpp  students_test.hpp
examples/cpp/advanced/: CMakeLists.txt  regression_test.hpp
examples/cpp/basic/: CMakeLists.txt  code_under_test.cpp  regression_test.cpp  regression_test.hpp
examples/cpp/cmake/: external.cmake
examples/flowers/: .gitignore  .python-version  code_under_test.py  regression_test.py
examples/java/: README.md  build.gradle.kts  settings.gradle.kts
examples/java/01_java_minimal/: README.md  build.gradle.kts
examples/java/02_java_main_api/: README.md  build.gradle.kts
examples/java/03_java_core_api/: README.md  build.gradle.kts
examples/js/: README.md  lerna.json  package-lock.json  package.json  tsconfig.json
examples/js/01_node_minimal/: README.md  is_prime.ts  is_prime_test.ts  package.json  tsconfig.json
examples/js/02_node_basic_api/: package.json  students.ts  students_test.ts
examples/js/02_node_main_api/: README.md  package.json  students.ts  students_test.ts
examples/js/03_node_client_api/: package.json  students.ts  students_test.ts  wizards_test.ts
examples/js/03_node_core_api/: README.md  package.json  students.ts  students_test.ts  tsconfig.json
examples/python/: README.md
examples/python/01_python_minimal/: README.md  is_prime.py  is_prime_test.py
examples/python/02_python_basic_api/: README.md  students.py  students_test.py
examples/python/02_python_main_api/: README.md  requirements.txt  students.py  students_test.py  unit_test.py
examples/python/03_python_client_api/: students.py  students_test.py
examples/python/03_python_core_api/: README.md  students.py  students_test.py
examples/python/04_python_external_files/: flowers.py  flowers_test.py
examples/python/04_python_image_processing/: image_processing.py  image_processing_test.py
examples/python/05_python_ml_pipeline/: README.md  requirements.txt
examples/python/06_python_computer_vision/: computer_vision.py  computer_vision_test.py
examples/python/06_python_ml_pipeline_II/: README.md  ml_pipeline.py  ml_pipeline_test.py
examples/python/06_python_roboflow/: _model.py  config.json  main.py  requirements.txt
examples/python/07_python_ecoli/: README.md  ml_pipeline.py  ml_pipeline_test.py
examples/python/07_python_ml_pipeline/: README.md  ml_pipeline.py  ml_pipeline_test.py  requirements.txt
examples/python/flowers/: testcases.txt
examples/scripts/: sync-examples.sh  sync.sh
sdk/cpp/: .clang-format  .clang-tidy  .dockerignore  .gitignore  .readthedocs.yaml  BUILD  CMakeLists.txt  Changelog.md  Dockerfile  README.md  Readme.md  WORKSPACE  appveyor.yml  build.bat  build.sh  conanfile.py
sdk/cpp/bazel/: cpp.bzl  third_party.bzl
sdk/cpp/cli/: CMakeLists.txt  compare.cpp  comparison.cpp  deserialize.cpp  filesystem.cpp  main.cpp  merge.cpp  operations.cpp  operations.hpp  post.cpp  resultfile.cpp  update.cpp  view.cpp
sdk/cpp/cmake/: external.cmake  find_version.cmake  utils.cmake
sdk/cpp/config/: Dockerfile  touca.fbs  touca_v2.fbs  weasel.fbs
sdk/cpp/docs/: BasicApi.md  Build.md  Build_Cpp.md  Examples.md  Integration.md  Quickstart.md  README.md  Readme.md  Tutorials.md  Tutorials_Cpp.md  config-file.schema.json
sdk/cpp/examples/: CMakeLists.txt  README.md
sdk/cpp/framework/: CMakeLists.txt  framework.cpp  suites.cpp  utils.cpp
sdk/cpp/src/: CMakeLists.txt  client.cpp  comparison.cpp  coptions.cpp  deserialize.cpp  filesystem.cpp  options.cpp  runner.cpp  testcase.cpp  touca.cpp  transport.cpp  types.cpp  weasel.cpp
sdk/cpp/tests/: CMakeLists.txt  client.cpp
sdk/cpp/utils/: CMakeLists.txt  main.cpp  operations.cpp  (+1 more)
sdk/python/: .gitignore  .prettierrc.json  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  Changelog.md  LICENSE  MANIFEST.in  Makefile  README.md  Readme.rst  pyproject.toml  setup.py  tox.ini
(+1604 files in other folders)
